--- a/index.html
+++ b/index.html
@@ -11,137 +11,158 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header_navigation">
-        <a class="header-logo link" href="./index.html"
-          ><span class="header-web">Web</span>Studio</a
-        >
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link current link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="adress">
-        <ul class="adress-list list">
-          <li class="adress-item">
-            <a class="adress-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="adress-item">
-            <a class="adress-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="header_navigation">
+          <a class="header-logo link" href="./index.html"
+            ><span class="header-web">Web</span>Studio</a
+          >
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link current link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="adress-list list">
+            <li class="adress-item">
+              <a class="adress-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-item">
+              <a class="adress-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
       <section class="features">
-        <h2 class="visually-hidden">Features</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="features-subtitle">Strategy</h3>
-            <p class="features-text text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Punctuality</h3>
-            <p class="features-text text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Diligence</h3>
-            <p class="features-text text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Technologies</h3>
-            <p class="features-text text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-text text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-text text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-text text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-text text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="doing">
-        <h2 class="doing-title">What are we doing</h2>
-        <ul class="doing-list list">
-          <li class="doing-item">
-            <img src="./images/img1.jpg" alt="photo of computer" width="360" />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/img2.jpg"
-              alt="photo of screens mobile"
-              width="360"
-            />
-          </li>
-          <li class="doing-item">
-            <img src="./images/img3.jpg" alt="photo of mobile" width="360" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="doing-title">What are we doing</h2>
+          <ul class="doing-list list">
+            <li class="doing-item">
+              <img
+                src="./images/img1.jpg"
+                alt="photo of computer"
+                width="360"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/img2.jpg"
+                alt="photo of screens mobile"
+                width="360"
+              />
+            </li>
+            <li class="doing-item">
+              <img src="./images/img3.jpg" alt="photo of mobile" width="360" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/teamcard1.jpg"
-              alt="photo Product Designer"
-              width="264"
-            />
-            <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-text text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/teamcard2.jpg"
-              alt="photo Frontend Developer"
-              width="264"
-            />
-            <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-text text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/teamcard3.jpg"
-              alt="photo Marketing"
-              width="264"
-            />
-            <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-text text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/teamcard4.jpg"
-              alt="photo UI Designer"
-              width="264"
-            />
-            <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-text text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/teamcard1.jpg"
+                alt="photo Product Designer"
+                width="264"
+              />
+              <h3 class="team-subtitle">Mark Guerrero</h3>
+              <p class="team-text text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/teamcard2.jpg"
+                alt="photo Frontend Developer"
+                width="264"
+              />
+              <h3 class="team-subtitle">Tom Ford</h3>
+              <p class="team-text text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/teamcard3.jpg"
+                alt="photo Marketing"
+                width="264"
+              />
+              <h3 class="team-subtitle">Camila Garcia</h3>
+              <p class="team-text text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/teamcard4.jpg"
+                alt="photo UI Designer"
+                width="264"
+              />
+              <h3 class="team-subtitle">Daniel Wilson</h3>
+              <p class="team-text text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
