--- a/index.html
+++ b/index.html
@@ -166,13 +166,15 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        ><span class="footer-web">Web</span>Studio</a
-      >
-      <p class="footer-text text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"
+          ><span class="footer-web">Web</span>Studio</a
+        >
+        <p class="footer-text text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
