--- a/portfolio.html
+++ b/portfolio.html
@@ -59,109 +59,123 @@
     </header>
     <main>
       <section class="portfolio">
-        <h1 class="works visually-hidden">Our works</h1>
-        <ul class="works-list list">
-          <li class="works-item">
-            <button class="works-button" type="button">All</button>
-          </li>
-          <li class="works-item">
-            <button class="works-button" type="button">Web Site</button>
-          </li>
-          <li class="works-item">
-            <button class="works-button" type="button">App</button>
-          </li>
-          <li class="works-item">
-            <button class="works-button" type="button">Design</button>
-          </li>
-          <li class="works-item">
-            <button class="works-button" type="button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="offers-list list">
-          <li class="offers-item">
-            <img src="./images/bankingapp.jpg" alt="Banking app" width="360" />
-            <h2 class="offers-title">Banking App Interface Concept</h2>
-            <p class="offers-text">App</p>
-          </li>
-          <li class="offers-item">
-            <img
-              src="./images/cashlesspayment.jpg"
-              alt="Mobile telephone"
-              width="360"
-            />
-            <h2 class="offers-title">Cashless Payment</h2>
-            <p class="offers-text">Marketing</p>
-          </li>
-          <li class="offers-item">
-            <img
-              src="./images/meditaioonapp.jpg"
-              alt="Computer and mobile"
-              width="360"
-            />
-            <h2 class="offers-title">Meditaion App</h2>
-            <p class="offers-text">App</p>
-          </li>
-          <li class="offers-item">
-            <img
-              src="./images/taxiservice.jpg"
-              alt="Venicle interior"
-              width="360"
-            />
-            <h2 class="offers-title">Taxi Service</h2>
-            <p class="offers-text">Marketing</p>
-          </li>
-          <li class="offers-item">
-            <img
-              src="./images/screenillustr.jpg"
-              alt="Screenshots"
-              width="360"
-            />
-            <h2 class="offers-title">Screen Illustrations</h2>
-            <p class="offers-text">Design</p>
-          </li>
-          <li class="offers-item">
-            <img
-              src="./images/onlinecourses.jpg"
-              alt="Girl with mobile"
-              width="360"
-            />
-            <h2 class="offers-title">Online Courses</h2>
-            <p class="offers-text">Marketing</p>
-          </li>
-          <li class="offers-item">
-            <img
-              src="./images/instagramstories.jpg"
-              alt="Image from instagram"
-              width="360"
-            />
-            <h2 class="offers-title">Instagram Stories Concept</h2>
-            <p class="offers-text">Design</p>
-          </li>
-          <li class="offers-item">
-            <img
-              src="./images/organicfood.jpg"
-              alt="Bag with food"
-              width="360"
-            />
-            <h2 class="offers-title">Organic Food</h2>
-            <p class="offers-text">Web Site</p>
-          </li>
-          <li class="offers-item">
-            <img src="./images/freshcofee.jpg" alt="Cup of coffe" width="360" />
-            <h2 class="offers-title">Fresh Coffee</h2>
-            <p class="offers-text">Web Site</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="works visually-hidden">Our works</h1>
+          <ul class="works-list list">
+            <li class="works-item">
+              <button class="works-button" type="button">All</button>
+            </li>
+            <li class="works-item">
+              <button class="works-button" type="button">Web Site</button>
+            </li>
+            <li class="works-item">
+              <button class="works-button" type="button">App</button>
+            </li>
+            <li class="works-item">
+              <button class="works-button" type="button">Design</button>
+            </li>
+            <li class="works-item">
+              <button class="works-button" type="button">Marketing</button>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <ul class="offers-list list">
+            <li class="offers-item">
+              <img
+                src="./images/bankingapp.jpg"
+                alt="Banking app"
+                width="360"
+              />
+              <h2 class="offers-title">Banking App Interface Concept</h2>
+              <p class="offers-text">App</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/cashlesspayment.jpg"
+                alt="Mobile telephone"
+                width="360"
+              />
+              <h2 class="offers-title">Cashless Payment</h2>
+              <p class="offers-text">Marketing</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/meditaioonapp.jpg"
+                alt="Computer and mobile"
+                width="360"
+              />
+              <h2 class="offers-title">Meditaion App</h2>
+              <p class="offers-text">App</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/taxiservice.jpg"
+                alt="Venicle interior"
+                width="360"
+              />
+              <h2 class="offers-title">Taxi Service</h2>
+              <p class="offers-text">Marketing</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/screenillustr.jpg"
+                alt="Screenshots"
+                width="360"
+              />
+              <h2 class="offers-title">Screen Illustrations</h2>
+              <p class="offers-text">Design</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/onlinecourses.jpg"
+                alt="Girl with mobile"
+                width="360"
+              />
+              <h2 class="offers-title">Online Courses</h2>
+              <p class="offers-text">Marketing</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/instagramstories.jpg"
+                alt="Image from instagram"
+                width="360"
+              />
+              <h2 class="offers-title">Instagram Stories Concept</h2>
+              <p class="offers-text">Design</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/organicfood.jpg"
+                alt="Bag with food"
+                width="360"
+              />
+              <h2 class="offers-title">Organic Food</h2>
+              <p class="offers-text">Web Site</p>
+            </li>
+            <li class="offers-item">
+              <img
+                src="./images/freshcofee.jpg"
+                alt="Cup of coffe"
+                width="360"
+              />
+              <h2 class="offers-title">Fresh Coffee</h2>
+              <p class="offers-text">Web Site</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        ><span class="footer-web">Web</span>Studio</a
-      >
-      <p class="footer-text text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"
+          ><span class="footer-web">Web</span>Studio</a
+        >
+        <p class="footer-text text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
