--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header_navigation">
           <a class="header-logo link" href="./index.html"
             ><span class="header-web">Web</span>Studio</a
@@ -87,80 +87,106 @@
                 alt="Banking app"
                 width="360"
               />
-              <h2 class="offers-title">Banking App Interface Concept</h2>
-              <p class="offers-text">App</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Banking App Interface Concept</h2>
+                <p class="offers-text">App</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/cashlesspayment.jpg"
                 alt="Mobile telephone"
                 width="360"
               />
-              <h2 class="offers-title">Cashless Payment</h2>
-              <p class="offers-text">Marketing</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Cashless Payment</h2>
+                <p class="offers-text">Marketing</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/meditaioonapp.jpg"
                 alt="Computer and mobile"
                 width="360"
               />
-              <h2 class="offers-title">Meditaion App</h2>
-              <p class="offers-text">App</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Meditaion App</h2>
+                <p class="offers-text">App</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/taxiservice.jpg"
                 alt="Venicle interior"
                 width="360"
               />
-              <h2 class="offers-title">Taxi Service</h2>
-              <p class="offers-text">Marketing</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Taxi Service</h2>
+                <p class="offers-text">Marketing</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/screenillustr.jpg"
                 alt="Screenshots"
                 width="360"
               />
-              <h2 class="offers-title">Screen Illustrations</h2>
-              <p class="offers-text">Design</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Screen Illustrations</h2>
+                <p class="offers-text">Design</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/onlinecourses.jpg"
                 alt="Girl with mobile"
                 width="360"
               />
-              <h2 class="offers-title">Online Courses</h2>
-              <p class="offers-text">Marketing</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Online Courses</h2>
+                <p class="offers-text">Marketing</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/instagramstories.jpg"
                 alt="Image from instagram"
                 width="360"
               />
-              <h2 class="offers-title">Instagram Stories Concept</h2>
-              <p class="offers-text">Design</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Instagram Stories Concept</h2>
+                <p class="offers-text">Design</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/organicfood.jpg"
                 alt="Bag with food"
                 width="360"
               />
-              <h2 class="offers-title">Organic Food</h2>
-              <p class="offers-text">Web Site</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Organic Food</h2>
+                <p class="offers-text">Web Site</p>
+              </div>
             </li>
+
             <li class="offers-item">
               <img
                 src="./images/freshcofee.jpg"
                 alt="Cup of coffe"
                 width="360"
               />
-              <h2 class="offers-title">Fresh Coffee</h2>
-              <p class="offers-text">Web Site</p>
+              <div class="offers-choice">
+                <h2 class="offers-title">Fresh Coffee</h2>
+                <p class="offers-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
