--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header_navigation">
           <a class="header-logo link" href="./index.html"
             ><span class="header-web">Web</span>Studio</a
@@ -131,8 +131,10 @@
                 alt="photo Product Designer"
                 width="264"
               />
-              <h3 class="team-subtitle">Mark Guerrero</h3>
-              <p class="team-text text">Product Designer</p>
+              <div class="team-cont">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -140,8 +142,10 @@
                 alt="photo Frontend Developer"
                 width="264"
               />
-              <h3 class="team-subtitle">Tom Ford</h3>
-              <p class="team-text text">Frontend Developer</p>
+              <div class="team-cont">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -149,8 +153,10 @@
                 alt="photo Marketing"
                 width="264"
               />
-              <h3 class="team-subtitle">Camila Garcia</h3>
-              <p class="team-text text">Marketing</p>
+              <div class="team-cont">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -158,8 +164,10 @@
                 alt="photo UI Designer"
                 width="264"
               />
-              <h3 class="team-subtitle">Daniel Wilson</h3>
-              <p class="team-text text">UI Designer</p>
+              <div class="team-cont">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
