--- a/portfolio.html
+++ b/portfolio.html
@@ -78,115 +78,131 @@
               <button class="works-button" type="button">Marketing</button>
             </li>
           </ul>
-        </div>
-        <div class="container">
           <ul class="offers-list list">
             <li class="offers-item">
-              <img
-                src="./images/bankingapp.jpg"
-                alt="Banking app"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Banking App Interface Concept</h2>
-                <p class="offers-text">App</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/bankingapp.jpg"
+                  alt="Banking app"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Banking App Interface Concept</h2>
+                  <p class="offers-text">App</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/cashlesspayment.jpg"
-                alt="Mobile telephone"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Cashless Payment</h2>
-                <p class="offers-text">Marketing</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/cashlesspayment.jpg"
+                  alt="Mobile telephone"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Cashless Payment</h2>
+                  <p class="offers-text">Marketing</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/meditaioonapp.jpg"
-                alt="Computer and mobile"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Meditaion App</h2>
-                <p class="offers-text">App</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/meditaioonapp.jpg"
+                  alt="Computer and mobile"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Meditaion App</h2>
+                  <p class="offers-text">App</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/taxiservice.jpg"
-                alt="Venicle interior"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Taxi Service</h2>
-                <p class="offers-text">Marketing</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/taxiservice.jpg"
+                  alt="Venicle interior"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Taxi Service</h2>
+                  <p class="offers-text">Marketing</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/screenillustr.jpg"
-                alt="Screenshots"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Screen Illustrations</h2>
-                <p class="offers-text">Design</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/screenillustr.jpg"
+                  alt="Screenshots"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Screen Illustrations</h2>
+                  <p class="offers-text">Design</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/onlinecourses.jpg"
-                alt="Girl with mobile"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Online Courses</h2>
-                <p class="offers-text">Marketing</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/onlinecourses.jpg"
+                  alt="Girl with mobile"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Online Courses</h2>
+                  <p class="offers-text">Marketing</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/instagramstories.jpg"
-                alt="Image from instagram"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Instagram Stories Concept</h2>
-                <p class="offers-text">Design</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/instagramstories.jpg"
+                  alt="Image from instagram"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Instagram Stories Concept</h2>
+                  <p class="offers-text">Design</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/organicfood.jpg"
-                alt="Bag with food"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Organic Food</h2>
-                <p class="offers-text">Web Site</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/organicfood.jpg"
+                  alt="Bag with food"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Organic Food</h2>
+                  <p class="offers-text">Web Site</p>
+                </div></a
+              >
             </li>
 
             <li class="offers-item">
-              <img
-                src="./images/freshcofee.jpg"
-                alt="Cup of coffe"
-                width="360"
-              />
-              <div class="offers-choice">
-                <h2 class="offers-title">Fresh Coffee</h2>
-                <p class="offers-text">Web Site</p>
-              </div>
+              <a class="offers-link link" href=""
+                ><img
+                  src="./images/freshcofee.jpg"
+                  alt="Cup of coffe"
+                  width="360"
+                />
+                <div class="offers-choice">
+                  <h2 class="offers-title">Fresh Coffee</h2>
+                  <p class="offers-text">Web Site</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
